--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,22 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
 nav ul.left-nav {
+    text-align: left;
+}
+
+nav ul.right-nav {
+    text-align: right;
+}
+
+nav ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
 nav ul li {
     display: inline;
     margin: 0 10px;
@@ -17,13 +27,16 @@ a {
     text-decoration: none;
     color: #999;
 }
+
 a:hover {
     text-decoration: underline;
 }
+
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
@@ -38,3 +51,20 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+body { padding-top: 70px; }
+.jumbotron {
+  color: #2c3e50;
+  background: #ecf0f1;
+
+}
+.navbar-inverse {
+  background: #2c3e50;
+  color: white;
+}
+.navbar-inverse .navbar-brand, .navbar-inverse a{
+  color:white;
+}
+.navbar-inverse .navbar-nav>li>a {
+  color: white;
+} 
