--- a/css/main.css
+++ b/css/main.css
@@ -1,40 +1,11 @@
 body {
-    margin: 60px auto;
-    width: 70%;
-}
-
-nav ul.left-nav {
-    text-align: left;
-}
-
-nav ul.right-nav {
-    text-align: right;
-}
-
-nav ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-a {
-    text-decoration: none;
-    color: #999;
-}
-
-a:hover {
-    text-decoration: underline;
+    margin: 60px auto;
+    padding-top: 70px;
 }
 
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 
 p {
@@ -52,7 +23,6 @@ ul.posts li {
     list-style: none;
 }
 
-body { padding-top: 70px; }
 .jumbotron {
   color: #2c3e50;
   background: #ecf0f1;
@@ -61,6 +31,7 @@ body { padding-top: 70px; }
 .navbar-inverse {
   background: #2c3e50;
   color: white;
+  font-weight: bold;
 }
 .navbar-inverse .navbar-brand, .navbar-inverse a{
   color:white;
