--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,53 @@
 body {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    margin: 60px auto;
-    padding-top: 70px;
+    font-family: 'Cinzel', serif;
+    align-content: center;
+    padding-top: 100px;
+}
+
+.navbar-inverse {
+    font-weight: bold;
+}
+
+#navbar {
+    background: #5795f9;
+}
+
+#navbar-content {
+    color: white;
+}
+
+.hireMe {
+    font-family: 'Oleo Script', cursive;
+    font-size: 1.5em;
+}
+
+.jumbotron {
+    background: #ecf0f1;
+    height: 100%;
+}
+
+#section-title {
+    text-align: center;
+    text-decoration: underline;
+    margin: 50px 0;
+}
+
+#about {
+    height: auto;
+    padding-bottom: 100px;
+}
+
+#services {
+    height: auto;
+    padding-bottom: 100px;
+}
+
+#profile-pic {
+    width: 15%;
+    padding: 5px;
+    border: 1px solid #5795f9;
+    float: left;
+    margin-right: 25px;
 }
 
 h1 {
@@ -11,31 +57,20 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color: #333;
+    font-family: 'EB Garamond', serif;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
 
-ul.posts li {
-    list-style: none;
-}
 
-.jumbotron {
-  color: #2c3e50;
-  background: #ecf0f1;
 
-}
-.navbar-inverse {
-  background: #2c3e50;
-  color: white;
-  font-weight: bold;
-}
-.navbar-inverse .navbar-brand, .navbar-inverse a{
-  color:white;
-}
-.navbar-inverse .navbar-nav>li>a {
-  color: white;
-} 
+
+
+
+
+
+    
+
+
+
+
+
